# smooth-scroll-linux

./: CMakeLists.txt  LICENSE.txt  README.md  README.zh.md  smooth-scroll.toml  smooth_scroll.cpp  wheel_smoother.cpp  wheel_smoother.h
.github/workflows/: build.yml
config/: smooth-scroll.toml
debian/: postinst  prerm  smooth-scroll.service
docs/: ipc_protocol.md  technical_insight.md
rpm/: postinst.sh  prerm.sh
src/: ipc_server.cpp  ipc_server.h  mouse_movement_buffer.cpp  mouse_movement_buffer.h  smooth_scroll.cpp  version.h.in  wheel_smoother.cpp  wheel_smoother.h
tools/: ipc_client.h  ss_passthrough.cpp  ss_status.cpp  ss_stop.cpp
